; ModuleID = '/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_res0.c_res1_forward.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_res0.c_res1_forward.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_encodepart = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @res1_forward(i32* %0, i32* %1, i32* %2, i32** %3, i32* %4, i32 %5, i64** %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i64**, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32** %3, i32*** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i64** %6, i64*** %16, align 8
  store i32 %7, i32* %17, align 4
  store i32 0, i32* %19, align 4
  %20 = load i32*, i32** %11, align 8
  store i32 0, i32* %18, align 4
  br label %21

21:                                               ; preds = %44, %8
  %22 = load i32, i32* %18, align 4
  %23 = load i32, i32* %15, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %47

25:                                               ; preds = %21
  %26 = load i32*, i32** %14, align 8
  %27 = load i32, i32* %18, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %43

32:                                               ; preds = %25
  %33 = load i32**, i32*** %13, align 8
  %34 = load i32, i32* %18, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32*, i32** %33, i64 %35
  %37 = load i32*, i32** %36, align 8
  %38 = load i32**, i32*** %13, align 8
  %39 = load i32, i32* %19, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %19, align 4
  %41 = sext i32 %39 to i64
  %42 = getelementptr inbounds i32*, i32** %38, i64 %41
  store i32* %37, i32** %42, align 8
  br label %43

43:                                               ; preds = %32, %25
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %18, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %18, align 4
  br label %21

47:                                               ; preds = %21
  %48 = load i32, i32* %19, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %59

50:                                               ; preds = %47
  %51 = load i32, i32* %17, align 4
  %52 = load i32*, i32** %10, align 8
  %53 = load i32*, i32** %12, align 8
  %54 = load i32**, i32*** %13, align 8
  %55 = load i32, i32* %19, align 4
  %56 = load i64**, i64*** %16, align 8
  %57 = load i32, i32* @_encodepart, align 4
  %58 = call i32 (i32*, i32*, i32**, i32, i64**, i32, ...) @_01forward(i32* %52, i32* %53, i32** %54, i32 %55, i64** %56, i32 %57)
  store i32 %58, i32* %9, align 4
  br label %60

59:                                               ; preds = %47
  store i32 0, i32* %9, align 4
  br label %60

60:                                               ; preds = %59, %50
  %61 = load i32, i32* %9, align 4
  ret i32 %61
}

declare dso_local i32 @_01forward(i32*, i32*, i32**, i32, i64**, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
